# monopoly_ai

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ubuntu_install_dependencies.sh
SFML/: SFMLSharedTargets.cmake
assets/fields/: fields.json
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
monopoly_ai/: CMakeLists.txt  monopoly_ai.cc  monopoly_ai.cpp  monopoly_ai.h
monopoly_ai/game_elements/: Board.cc  Board.h  BoardSquare.cc  BoardSquare.h  Dice.h  Drawable.h  Player.cc  Player.h
monopoly_ai/game_elements/include/: Action.h  ActionField.h  Board.h  BoardSquare.h  Color.h  Dice.h  Drawable.h  Player.h  Property.h  TextRenderer.h
monopoly_ai/game_elements/include/fields/: ActionField.h  BlankField.h  Estate.h  FieldLoader.h  GoToJailField.h  Property.h  RailRoad.h  TaxField.h  UtilityField.h
monopoly_ai/game_elements/src/: Action.cc  Board.cc  BoardSquare.cc  Color.cc  Dice.cc  Player.cc  Property.cc  TextRenderer.cc
monopoly_ai/game_elements/src/NEAT_algorithm/: NEAT.cpp  NEAT.py
monopoly_ai/game_elements/src/fields/: BlankField.cc  Estate.cc  FieldLoader.cc  GoToJailField.cc  Property.cc  RailRoad.cc  TaxField.cc  UtilityField.cc
monopoly_ai/interface_components/: Board.cc  Board.h  BoardSquare.cc  BoardSquare.h  Drawable.h
tests/: CMakeLists.txt  GameTests.cpp
